# PonyClean

./: .gitignore  CHANGDELOG.md  CHANGELOG.md  README.md  pyproject.toml
cclean/: config.py  init.py  main.py  paths.py  reports.py  resolver.py  runner.py
cclean/tests/: test_config.py  test_guard.py  test_init.py  test_resolver.py  test_runner.py
data/: clean_default.toml
