[project]
name = "ponyclean"
version = "0.1.0"
description = "Simple project cleaner"
readme = "README.md"
authors = [
  {name = "PonyPaPony"}
]
license = {text = "MIT"}

[project.scripts]
cclean = "cclean.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"